--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 
   gtag('config', 'UA-162839125-1');
 </script>
-
+    <!-- Twinword Ideas Affiliate Automatic Tracking Code Begin -->
+<script async src="https://www.twinword.com/ideas/api/affiliate/tag.js"></script>
+<script>
+  window.twiAe = window.twiAe || [];
+  twiA = window.twiA || function(){twiAe.push(arguments);};
+  twiA('afid', 'twiaf-7a8fb93d2128');
+  twiA('send', 'pageview');
+</script>
+<!-- Twinword Ideas Affiliate Automatic Tracking Code End -->
     <title>PSSM-Dinesh</title>
   </head>
   <body>
