--- a/meditation.html
+++ b/meditation.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Twinword Ideas Affiliate Automatic Tracking Code Begin -->
+<script async src="https://www.twinword.com/ideas/api/affiliate/tag.js"></script>
+<script>
+  window.twiAe = window.twiAe || [];
+  twiA = window.twiA || function(){twiAe.push(arguments);};
+  twiA('afid', 'twiaf-7a8fb93d2128');
+  twiA('send', 'pageview');
+</script>
+<!-- Twinword Ideas Affiliate Automatic Tracking Code End -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="quotes.css" />
