--- a/meditation.html
+++ b/meditation.html
@@ -3,6 +3,8 @@
   <head>
     <!-- Twinword Ideas Affiliate Automatic Tracking Code Begin -->
 <script async src="https://www.twinword.com/ideas/api/affiliate/tag.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9238331537698562"
+     crossorigin="anonymous"></script>
 <script>
   window.twiAe = window.twiAe || [];
   twiA = window.twiA || function(){twiAe.push(arguments);};
